--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "typescript": "~4.9.4",
     "xliff": "^6.1.0"
   },
-  "name": "planimal",
+  "name": "eastro",
   "private": true,
   "scripts": {
     "build": "ng build",
