--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
+  "name": "eastro",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "build": "ng build",
+    "i18n-01-extract": "ng extract-i18n app --output-path src/locale --out-file messages.en-GB.xliff --format xliff --progress",
+    "i18n-02-upload-english": "start https://crowdin.com/project/planimal/content/files",
+    "i18n-03-create-messages": "tsc tools/i18n-create-messages.ts && node tools/i18n-create-messages.js",
+    "i18n": "npm run i18n-01-extract && npm run i18n-03-create-messages",
+    "ng": "ng",
+    "start": "ng serve --port 3203 --open",
+    "test": "ng test",
+    "watch": "ng build --watch --configuration development"
+  },
   "dependencies": {
     "@angular/animations": "^15.2.0",
     "@angular/cdk": "^14.2.6",
@@ -32,18 +46,7 @@
     "typescript": "~4.9.4",
     "xliff": "^6.1.0"
   },
-  "name": "eastro",
-  "private": true,
-  "scripts": {
-    "build": "ng build",
-    "i18n-01-extract": "ng extract-i18n app --output-path src/locale --out-file messages.en-GB.xliff --format xliff --progress",
-    "i18n-02-upload-english": "start https://crowdin.com/project/planimal/content/files",
-    "i18n-03-create-messages": "tsc tools/i18n-create-messages.ts && node tools/i18n-create-messages.js",
-    "i18n": "npm run i18n-01-extract && npm run i18n-03-create-messages",
-    "ng": "ng",
-    "start": "ng serve --port 3203 --open",
-    "test": "ng test",
-    "watch": "ng build --watch --configuration development"
-  },
-  "version": "0.0.0"
+  "overrides": {
+    "semver": "~7.5.3"
+  }
 }
