--- a/angular.json
+++ b/angular.json
@@ -8,15 +8,13 @@
       },
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "configurations": {
             "development": {
-              "buildOptimizer": false,
               "extractLicenses": false,
               "namedChunks": true,
               "optimization": false,
-              "sourceMap": true,
-              "vendorChunk": true
+              "sourceMap": true
             },
             "production": {
               "budgets": [
@@ -53,31 +51,35 @@
             ],
             "index": "src/index.html",
             "inlineStyleLanguage": "scss",
-            "main": "src/main.ts",
-            "outputPath": "dist/app",
-            "polyfills": "src/polyfills.ts",
+            "outputPath": {
+              "base": "dist/app"
+            },
+            "polyfills": [
+              "src/polyfills.ts"
+            ],
             "scripts": [],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "tsConfig": "tsconfig.app.json"
+            "tsConfig": "tsconfig.app.json",
+            "browser": "src/main.ts"
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "app:build"
+            "buildTarget": "app:build"
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "development": {
-              "browserTarget": "app:build:development"
+              "buildTarget": "app:build:development"
             },
             "production": {
-              "browserTarget": "app:build:production"
+              "buildTarget": "app:build:production"
             }
           },
           "defaultConfiguration": "development"
